# epubclozer

./: .gitignore  LICENSE  README.md  pyproject.toml
epubclozer/: __main__.py  textprocessor.py
