[tool.poetry]
name = "epubclozer"
version = "1.0.3"
description = "Turn an epub into Anki flashcards"
authors = ["Nelson <nelson@truran.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ebooklib = "^0.18"
genanki = "^0.13.0"
spacy = "^3.4.4"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
